Fixes fuel not showing up and some 1x1's

--- a/style.css
+++ b/style.css
@@ -98,6 +98,15 @@ body {
     margin-left: 25px;
   }
 
+  .gtrack {
+    display: block;
+    position: absolute;
+    background-color: aqua;
+    outline-color: aquamarine;
+    outline-width: 5px;
+    outline-style: solid;
+  }
+
   .gridHolder {
     position: relative;
   }
